[package]
name = "eko"
version = "0.0.3"
edition = "2018"

authors = ["Ravern Koh <ravernkoh@gmail.com>"]
description = "Compiler and engine"
readme = "README.md"
license = "MIT"

[dependencies]
eko-gc = { git = "https://github.com/eko-lang/eko-gc" }
eko-gc-derive = { git = "https://github.com/eko-lang/eko-gc" }
